[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/mission_widget.gd" id="1_script"]

[node name="MissionWidget" type="PanelContainer"]
custom_minimum_size = Vector2(220, 240)
offset_right = 220.0
offset_bottom = 240.0
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "IN PROGRESS"
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "Mission Name"
horizontal_alignment = 1
autowrap_mode = 2

[node name="DescLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
theme_override_font_sizes/font_size = 11
text = "Description of the mission goes here."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
step = 1.0

[node name="ClaimBtn" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Claim"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ClaimBtn" to="." method="_on_claim_btn_pressed"]
